--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,4 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: make test
-      run: make test
+      run: 
+        apt update && apt install -y netcat
+        make test
