Added sudo to github action to run apt

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,5 +15,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: make test
       run: 
-        apt update && apt install -y netcat
+        sudo apt update && sudo apt install -y netcat
         make test
