--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: make test
-      run: |
-        sudo apt update && sudo apt install -y netcat
-        make test
+    - name: Installation
+      run: sudo apt update && sudo apt install -y netcat
+    - name: Tests
+      run: make test
