--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -6,12 +6,20 @@ server {
 
 	server_name site;
 
-	root /Users/simoulin/Desktop/Webserv/site;
+	error error/page404.html;
 
-	location 
+	root /Urses/simoulin/Desktop/Webserv/site;
+
+	location
 	{
-		
+		index					index.html test;
+		autoindex				on;
+		methods					get,post;
+		cgi_extension			.php;
+		cgi_bin					/usr/bin/php-cgi;
+		client_max_body_size	15;
+
+		auth_basic				on;
+		auth_basic_user_file	./www/private/.auth;
 	}
-
-
 }
