--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Installation
-      run: sudo apt update && sudo apt install -y netcat make
+      run: sudo apt update && sudo apt install -y netcat make valgrind
     - name: Tests
       run: make test
