--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,8 +1,12 @@
+
+# check if location est necessaire ou pas
+# si je mets plusieur fois un host ect
+###
+# pr#
 server {
+	listen 0;
 
-	listen 80;
-
-	host 1.2.4.5;
+	host 255.255.255.255;
 
 	server_name site;
 
@@ -10,16 +14,15 @@ server {
 
 	root /Urses/simoulin/Desktop/Webserv/site;
 
-	location
-	{
-		index					index.html test;
-		autoindex				on;
-		methods					get,post;
-		cgi_extension			.php;
-		cgi_bin					/usr/bin/php-cgi;
-		client_max_body_size	15;
+	location  {
+		index test;
+		index test1;
+		index test2;
 
-		auth_basic				on;
-		auth_basic_user_file	./www/private/.auth;
+		methods get;
+
 	}
+
+
+
 }
