--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -9,7 +9,16 @@ server {
 
 	root /Urses/simoulin/Desktop/Webserv/site;
 
-	location  {
+	location / {
+		index test;
+		index test1;
+		index test2;
+
+		methods get;
+
+	}
+
+		location /test {
 		index test;
 		index test1;
 		index test2;
