modif path value

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -7,9 +7,9 @@ server {
 
 	error error/page404.html;
 
-	root /Urses/simoulin/Desktop/Webserv/site;
+	root /test;
 
-	location / {
+	location /ok {
 		index test;
 		index test1;
 		index test2;
