--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -10,23 +10,7 @@ server {
 	root /test;
 
 	location /ok {
-		index test;
-		index test1;
-		index test2;
-
-		methods get;
-
+		cgi_bin /test/ ;
+		cgi_extension .php;
 	}
-
-		location /test {
-		index test;
-		index test1;
-		index test2;
-
-		methods get;
-
-	}
-
-
-
 }
