check if value is already set

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -9,8 +9,14 @@ server {
 
 	root /test;
 
+		index test bonjour;
+
+
 	location /ok {
 		cgi_bin /test/ ;
 		cgi_extension .php;
+
+		index test bonjour;
+		index test bonjour;
 	}
 }
