modif digit_value_fct()

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,5 @@
 server {
-	listen 80;
+	listen 800;
 
 	host 0.0.0.0;
 
@@ -7,7 +7,7 @@ server {
 
 	error error/page404.html;
 
-	root /test;
+	root /test; 
 
 		index test bonjour;
 
@@ -16,7 +16,9 @@ server {
 		cgi_bin /test/ ;
 		cgi_extension .php;
 
+		# index test bonjour;
 		index test bonjour;
-		index test bonjour;
+		# client_max_body_size 1;
+		client_max_body_size 1;
 	}
 }
