--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,24 +1,122 @@
 server {
-	listen 800;
+	listen					8002;
+	host					127.0.0.1;
+	server_name				default_server;
+	root					./www;
+	error					errorpages/404.html,404;
 
-	host 0.0.0.0;
+	location / {
+		root /test;
+		methods					GET,POST;
+		index					index.html;
+		autoindex				on;
+		cgi_extension			.php;
+		cgi_bin					/usr/bin/php-cgi;
+	}
 
-	server_name site;
+	location /errorpages {
+		index					index.html;
+		autoindex				on;
+		methods					GET;
+		cgi_extension			.php;
+		cgi_bin					/usr/bin/php-cgi;
+	}
 
-	error error/page404.html;
+	location /site {
+		index					index.html;
+		autoindex				off;
+		methods					GET,POST;
+		cgi_extension			.php;
+		cgi_bin					/usr/bin/php-cgi;
+	}
 
-	root /test; 
+	location /505 {
+		index			index.html;
+		autoindex		on;
+		methods			GET,POST;
+		cgi_extension	.php;
+		cgi_bin			/usr/bin/php-cgi;
+	}
 
-		index test bonjour;
+	location /private {
+		autoindex				on;
+		methods					GET;
+		auth_basic				on;
+		auth_basic_user_file	./www/private/.auth;
+	}
 
+	location /reroot {
+		root			/etc;
+	}
 
-	location /ok {
-		cgi_bin /test/ ;
-		cgi_extension .php;
+	location /spanish {
+		methods					GET;
+		autoindex				off;
+		index					index.html;
+		language				es,es-005;
+	}
+	
+	location /cgi {
+		index					index.html;
+		autoindex				on;
+		methods					GET,POST;
+		cgi_extension			.php;
+		cgi_bin					/usr/bin/php-cgi;
+		client_max_body_size	15;
+	}
 
-		# index test bonjour;
-		index test bonjour;
-		# client_max_body_size 1;
-		client_max_body_size 1;
+	location /uploads {
+		methods					POST,GET,DELETE;
+		autoindex				on;
+	}
+
+	location /noindex {
+		autoindex				off;
+		index					index.html;
+	}
+
+}
+
+server {  
+	listen  8002;
+	host 127.0.0.1;
+	server_name myserver;
+	root				/;
+
+	location / {
+		index			index.html;
+		autoindex		on;
+		methods			GET;
+		cgi_extension	.php;
+		cgi_bin			/usr/bin/php-cgi;
+	}
+}
+
+server {  
+	listen  8002;
+	host 127.0.0.1;
+	server_name random;
+	root	/etc;
+
+	location / {
+		index			index.html;
+		autoindex		on;
+		methods			GET;
+		cgi_extension	.php;
+		cgi_bin			/usr/bin/php-cgi;
+	}
+}
+
+server {  
+	listen  8001;
+	host 127.0.0.1;
+	root	./YoupiBanane;
+
+	location / {
+		index			index.html;
+		autoindex		on;
+		methods			GET,POST;
+		cgi_extension	.php;
+		cgi_bin			/usr/bin/php-cgi;
 	}
 }
