--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,7 +1,24 @@
 server {
 	listen 80;
 
-	host 0.0.0.0;
+	host 127.0.0.5;
+
+	server_name site;
+
+	error error/page404.html;
+
+	root /test;
+
+	location /ok {
+		cgi_bin /test/ ;
+		cgi_extension .php;
+	}
+}
+
+server {
+	listen 8080;
+
+	host 127.0.0.1;
 
 	server_name site;
 
