--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -17,7 +17,7 @@ server {
 	location /errorpages {
 		index					index.html;
 		autoindex				on;
-		methods					ET;
+		methods					GET;
 		cgi_extension			.php;
 		cgi_bin					/usr/bin/php-cgi;
 	}
