tmp for check main

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -7,8 +7,8 @@ server {
 
 	location / {
 		root /test;
-		methods					GET,POST;
-		index					index.html;
+		methods					GET,      POST     ;
+		index					index.html index.ht;
 		autoindex				on;
 		cgi_extension			.php;
 		cgi_bin					/usr/bin/php-cgi;
