--- a/conf/is_good.conf
+++ b/conf/is_good.conf
@@ -106,7 +106,21 @@
 # 		cgi_bin			/usr/bin/php-cgi;
 # 	}
 #  }
+server {
+	listen  80;
+	host 0.0.0.1;
+	root	./YoupiBanane;
 
+	# server_name test11;
+
+	location / {
+		index			index.html;
+		autoindex		on;
+		methods			GET,POST;
+		cgi_extension	.php;
+		cgi_bin			/usr/bin/php-cgiii;
+	}
+}
 server {
 	listen  80;
 	host 0.0.0.0;
@@ -121,4 +135,14 @@ server {
 		cgi_extension	.php;
 		cgi_bin			/usr/bin/php-cgi;
 	}
+
+
+		location / {
+		index			index.html;
+		autoindex		on;
+		methods			GET,POST;
+		cgi_extension	.php;
+		cgi_bin			/usr/bin/php-cgi;
+	}
 }
+
