server selector fait debut location selector

--- a/conf/is_good.conf
+++ b/conf/is_good.conf
@@ -107,11 +107,10 @@
 # 	}
 #  }
 server {
-	listen  80;
+	listen  81;
 	host 0.0.0.1;
 	root	./YoupiBanane;
 
-	# server_name test11;
 
 	location / {
 		index			index.html;
@@ -124,7 +123,7 @@ server {
 server {
 	listen  80;
 	host 0.0.0.0;
-	root	./YoupiBanane;
+	root	./Youpi;
 
 	server_name test;
 
@@ -137,7 +136,7 @@ server {
 	}
 
 
-		location / {
+		location /bonjour {
 		index			index.html;
 		autoindex		on;
 		methods			GET,POST;
