--- a/conf/is_good.conf
+++ b/conf/is_good.conf
@@ -106,20 +106,20 @@
 # 		cgi_bin			/usr/bin/php-cgi;
 # 	}
 #  }
-server {
-	listen  81;
-	host 0.0.0.1;
-	root	./YoupiBanane;
+# server {
+# 	listen  81;
+# 	host 0.0.0.1;
+# 	root	./YoupiBanane;
 
 
-	location / {
-		index			index.html;
-		autoindex		on;
-		methods			GET,POST;
-		cgi_extension	.php;
-		cgi_bin			/usr/bin/php-cgiii;
-	}
-}
+# 	location / {
+# 		index			index.html;
+# 		autoindex		on;
+# 		methods			GET,POST;
+# 		cgi_extension	.php;
+# 		cgi_bin			/usr/bin/php-cgiii;
+# 	}
+# }
 server {
 	listen  80;
 	host 0.0.0.0;
@@ -136,7 +136,16 @@ server {
 	}
 
 
-		location /bonjour {
+	location /jj {
+		index			index.html;
+		autoindex		on;
+		methods			GET,POST;
+		cgi_extension	.php;
+		cgi_bin			/usr/bin/php-cgi;
+	}
+
+
+	location /bonjourr {
 		index			index.html;
 		autoindex		on;
 		methods			GET,POST;
