--- a/conf/is_good.conf
+++ b/conf/is_good.conf
@@ -156,7 +156,7 @@ server {
 		location /test {
 		index			index.html;
 		autoindex		on;
-		methods			POST;
+		methods			POST, GET;
 		cgi_extension	.php;
 		cgi_bin			/usr/bin/php-cgi;
 	}
