--- a/conf/is_good.conf
+++ b/conf/is_good.conf
@@ -101,7 +101,7 @@
 # 	location / {
 # 		index			index.html;
 # 		autoindex		on;
-# 		methods			GET;
+# 		methods			POST;
 # 		cgi_extension	.php;
 # 		cgi_bin			/usr/bin/php-cgi;
 # 	}
@@ -153,7 +153,7 @@ server {
 		cgi_bin			/usr/bin/php-cgi;
 	}
 
-		location /test {
+	location /test {
 		index			index.html;
 		autoindex		on;
 		methods			POST, GET;
