--- a/conf/is_good.conf
+++ b/conf/is_good.conf
@@ -123,7 +123,7 @@
 server {
 	listen  8001;
 	host 0.0.0.0;
-	root	./Youpi;
+	root	/Users/jdyer/dev/webserv;
 
 	server_name test;
 		index			index.html;
@@ -137,7 +137,7 @@ server {
 		cgi_bin			/usr/bin/php-cgi;
 	}
 
-	location /jj {
+	location /srcs {
 		autoindex		on;
 		methods			POST;
 		cgi_extension	.php;
@@ -145,9 +145,10 @@ server {
 	}
 
 
-	location /bonjourr {
+	location /get_seances {
 		index			index.html;
-		autoindex		on;
+		root			/Users/jdyer/dev/get_seances;
+		autoindex		off;
 		methods			GET,POST;
 		cgi_extension	.php;
 		cgi_bin			/usr/bin/php-cgi;
