starting method_delete

--- a/conf/is_good.conf
+++ b/conf/is_good.conf
@@ -130,6 +130,8 @@ server {
 
 
 	location / {
+
+		root  jesuis/lepaf;
 		index			index.html;
 		autoindex		on;
 		methods			GET,POST;
@@ -137,28 +139,28 @@ server {
 		cgi_bin			/usr/bin/php-cgi;
 	}
 
-	location /jj {
-		autoindex		on;
-		methods			POST;
-		cgi_extension	.php;
-		cgi_bin			/usr/bin/php-cgi;
-	}
+	# location /jj {
+	# 	autoindex		on;
+	# 	methods			POST;
+	# 	cgi_extension	.php;
+	# 	cgi_bin			/usr/bin/php-cgi;
+	# }
 
 
-	location /bonjourr {
-		index			index.html;
-		autoindex		on;
-		methods			GET,POST;
-		cgi_extension	.php;
-		cgi_bin			/usr/bin/php-cgi;
-	}
+	# location /bonjourr {
+	# 	index			index.html;
+	# 	autoindex		on;
+	# 	methods			GET,POST;
+	# 	cgi_extension	.php;
+	# 	cgi_bin			/usr/bin/php-cgi;
+	# }
 
-	location /test {
-		index			index.html;
-		autoindex		on;
-		methods			POST, GET;
-		cgi_extension	.php;
-		cgi_bin			/usr/bin/php-cgi;
-	}
+	# location /test {
+	# 	index			index.html;
+	# 	autoindex		on;
+	# 	methods			POST, GET;
+	# 	cgi_extension	.php;
+	# 	cgi_bin			/usr/bin/php-cgi;
+	# }
 }
 
