--- a/conf/is_good.conf
+++ b/conf/is_good.conf
@@ -147,7 +147,7 @@ server {
 
 	location /get_seances {
 		index			index.html;
-		root			/Users/jdyer/dev/get_seances;
+		root			/Users/jdyer/dev;
 		autoindex		off;
 		methods			GET,POST;
 		cgi_extension	.php;
