--- a/conf/is_good.conf
+++ b/conf/is_good.conf
@@ -125,7 +125,7 @@ server {
 	host 0.0.0.0;
 	root	/Users/jdyer/dev/webserv;
 
-	server_name test;
+	server_name localhost:8001;
 		index			index.html;
 
 
