debut des tests du ;iddleware apc

--- a/srcs/http/middlewares/conf/is_good.conf
+++ b/srcs/http/middlewares/conf/is_good.conf
@@ -123,7 +123,7 @@
 server {
 	listen  8001;
 	host 0.0.0.0;
-	root	/Users/jdyer/webserv/srcs/http;
+	root	/Library/Python/2.7/site-packages;
 
 	server_name test;
 		index			index.html;
