fin tests apc premiere partie

--- a/srcs/http/middlewares/conf/apcconf1.conf
+++ b/srcs/http/middlewares/conf/apcconf1.conf
@@ -1,7 +1,7 @@
 server {
 	listen  8001;
 	host 0.0.0.0;
-	root	/Library/Python/2.7/site-packages;
+	root	/Library;
 
 	server_name test;
 	index			index.html;
@@ -16,7 +16,7 @@ server {
 		cgi_bin			/usr/bin/php-cgi;
 	}
 
-	location /vboxapi {
+	location /MunkiReport/Logs {
 		autoindex		on;
 		methods			POST;
 		cgi_extension	.php;
@@ -24,18 +24,10 @@ server {
 	}
 
 
-	location /pip-20.1-py2.7.egg/pip {
+	location /Printers {
 		index			index.html;
 		autoindex		on;
 		methods			GET,POST;
-		cgi_extension	.php;
-		cgi_bin			/usr/bin/php-cgi;
-	}
-
-	location /test {
-		index			index.html;
-		autoindex		on;
-		methods			POST, GET;
 		cgi_extension	.php;
 		cgi_bin			/usr/bin/php-cgi;
 	}
