--- a/srcs/http/middlewares/conf/is_good.conf
+++ b/srcs/http/middlewares/conf/is_good.conf
@@ -123,8 +123,8 @@
 server {
 	listen  8001;
 	host 0.0.0.0;
-	root	/Library/Python/2.7/site-packages;
-
+	root	/Library/Receipts;
+	
 	server_name test;
 		index			index.html;
 
