avanceee tests middlwrs dont debut index selector

--- a/srcs/http/middlewares/Makefile
+++ b/srcs/http/middlewares/Makefile
@@ -22,6 +22,7 @@ SRC = 	main.cpp\
 	Middleware.cpp\
 	MiddlewareChain.cpp\
 	AbsolutePathConcatenator.cpp\
+	IndexSelector.cpp\
 	../Request/Request.cpp\
 	../Request/requestParsing.cpp\
 	../Request/checkIncompleteRequest.cpp\
