--- a/srcs/http/middlewares/conf/apcconf2.conf
+++ b/srcs/http/middlewares/conf/apcconf2.conf
@@ -9,7 +9,7 @@ server {
 	location / {
 		root			/Library/Perl/5.18;
 		index			index.html;
-		autoindex		off;
+		autoindex		on;
 		methods			GET,POST,DELETE;
 		cgi_extension	.php;
 		cgi_bin			/usr/bin/php-cgi;
