--- a/srcs/http/middlewares/conf/is_good.conf
+++ b/srcs/http/middlewares/conf/is_good.conf
@@ -132,7 +132,7 @@ server {
 	location / {
 
 		index			index.html;
-		autoindex		off;
+		autoindex		on;
 		methods			GET,POST,DELETE;
 		cgi_extension	.php;
 		cgi_bin			/usr/bin/php-cgi;
