fin tests index selector

--- a/srcs/http/middlewares/conf/index_selector.conf
+++ b/srcs/http/middlewares/conf/index_selector.conf
@@ -24,10 +24,10 @@ server {
 	}
 
 	location /images {
-		autoindex		on;
+		autoindex		off;
 		index 			nono;
-		root			/Library/WebServer/Documents/share/httpd/manual;
-		methods			POST;
+		root			/Library/WebServer/share/httpd/manual;
+		methods			POST, GET;
 		cgi_extension	.php;
 		cgi_bin			/usr/bin/php-cgi;
 	}
