--- a/conf/is_good.conf
+++ b/conf/is_good.conf
@@ -139,7 +139,7 @@ server {
 
 	location /srcs {
 		autoindex		on;
-		methods			POST;
+		methods			GET, POST;
 		cgi_extension	.php;
 		cgi_bin			/usr/bin/php-cgi;
 	}
