debu posttask attention parsing du body a l'air delirant

--- a/conf/is_good.conf
+++ b/conf/is_good.conf
@@ -123,9 +123,9 @@
 server {
 	listen  8001;
 	host 0.0.0.0;
-	root	/Users/simoulin/Desktop/webserv/srcs/http;
+	root	/Users/jdyer/dev/webserv;
 
-	server_name localhost:8001;
+	server_name test;
 		index			index.html;
 
 
