insertion middleware 'INdex selector' , have too check if root MUST be here or SHOULD be here

--- a/conf/is_good.conf
+++ b/conf/is_good.conf
@@ -123,7 +123,7 @@
 server {
 	listen  8001;
 	host 0.0.0.0;
-	root	/home/lenpahtos/webserv;
+	# root	/home/lenpahtos/webserv;
 
 	server_name localhost:8001;
 		index			index.html, index.htm;
@@ -132,8 +132,8 @@ server {
 	location / {
 
 		index			index.html;
-		autoindex		off;
-		methods			GET,POST,DELETE;
+		autoindex		on;
+		methods			GET;
 		cgi_extension	.php;
 		cgi_bin			/usr/bin/php-cgi;
 	}
