--- a/conf/is_good.conf
+++ b/conf/is_good.conf
@@ -123,7 +123,7 @@
 server {
 	listen  8001;
 	host 0.0.0.0;
-	# root	/home/lenpahtos/webserv;
+	root	/Users/simoulin/Desktop/webserv;
 
 	server_name localhost:8001;
 		index			index.html, index.htm;
