--- a/conf/is_good.conf
+++ b/conf/is_good.conf
@@ -96,14 +96,23 @@
 # 	listen  8003;
 # 	host 0.0.0.0;
 # 	server_name random;
-# 	root	/etc;
+# 	root	/Users/simoulin/Desktop/webserv;
+
 
 # 	location / {
 # 		index			index.html;
 # 		autoindex		on;
-# 		methods			POST;
+# 		methods			POST, GET;
 # 		cgi_extension	.php;
 # 		cgi_bin			/usr/bin/php-cgi;
+# 	}
+
+# 		location /conf {
+# 		index			index.html;
+# 		autoindex		on;
+# 		methods			GET,POST;
+# 		cgi_extension	.php;
+# 		cgi_bin			/usr/bin/php-cgiii;
 # 	}
 #  }
 # server {
