--- a/conf/is_good.conf
+++ b/conf/is_good.conf
@@ -142,7 +142,7 @@ server {
 
 		index			index.html;
 		autoindex		on;
-		methods			GET;
+		methods			GET,POST,DELETE;
 		cgi_extension	.php;
 		cgi_bin			/usr/bin/php-cgi;
 	}
