--- a/conf/is_good.conf
+++ b/conf/is_good.conf
@@ -129,46 +129,74 @@
 # 		cgi_bin			/usr/bin/php-cgiii;
 # 	}
 # }
+# server {
+# 	listen  8001;
+# 	host 0.0.0.0;
+# 	root	/Users/simoulin/Desktop/webserv;
+
+# 	server_name localhost:8001;
+# 		index			index.html, index.htm;
+
+
+# 	location / {
+
+# 		index			index.html;
+# 		autoindex		on;
+# 		methods			GET,POST,DELETE;
+# 		cgi_extension	.php;
+# 		cgi_bin			/usr/bin/php-cgi;
+# 	}
+
+# 	location /jj {
+# 		autoindex		on;
+# 		methods			POST;
+# 		cgi_extension	.php;
+# 		cgi_bin			/usr/bin/php-cgi;
+# 	}
+
+
+# 	location /bonjourr {
+# 		index			index.html;
+# 		autoindex		on;
+# 		methods			GET,POST;
+# 		cgi_extension	.php;
+# 		cgi_bin			/usr/bin/php-cgi;
+# 	}
+
+# 	location /test {
+# 		index			index.html;
+# 		autoindex		on;
+# 		methods			POST, GET;
+# 		cgi_extension	.php;
+# 		cgi_bin			/usr/bin/php-cgi;
+# 	}
+# }
+
+
 server {
 	listen  8001;
 	host 0.0.0.0;
-	root	/Users/simoulin/Desktop/webserv;
+	# root	/Users/simoulin/Desktop;
 
 	server_name localhost:8001;
 		index			index.html, index.htm;
 
 
 	location / {
-
+		
+		root 	/Users/simoulin/Desktop/html;
 		index			index.html;
-		autoindex		on;
-		methods			GET,POST,DELETE;
-		cgi_extension	.php;
-		cgi_bin			/usr/bin/php-cgi;
+		methods			GET;
 	}
+    location /post_body {
+                client_max_body_size    100;
+			methods			POST;
 
-	location /jj {
-		autoindex		on;
-		methods			POST;
-		cgi_extension	.php;
-		cgi_bin			/usr/bin/php-cgi;
-	}
+    }
+    location /directory {
 
-
-	location /bonjourr {
-		index			index.html;
-		autoindex		on;
-		methods			GET,POST;
-		cgi_extension	.php;
-		cgi_bin			/usr/bin/php-cgi;
-	}
-
-	location /test {
-		index			index.html;
-		autoindex		on;
-		methods			POST, GET;
-		cgi_extension	.php;
-		cgi_bin			/usr/bin/php-cgi;
-	}
+		methods			GET;
+        root   /Users/simoulin/Desktop/html/YoupiBanane;
+        index  youpi.bad_extension;
+    }
 }
-
