suppression (i+1) in absolute path concatenator

--- a/conf/is_good.conf
+++ b/conf/is_good.conf
@@ -185,7 +185,7 @@ server {
 		
 		root 	/Users/simoulin/Desktop/webserv/test/html;
 		index			index.html;
-		methods			GET;
+		methods			GET, POST;
 	}
     location /post_body {
                 client_max_body_size    100;
