segfault quand wrong requete, par exemple chunk trop grand

--- a/conf/config.conf
+++ b/conf/config.conf
@@ -132,14 +132,14 @@
 server {
 	listen  8001;
 	host 0.0.0.0;
-	root	/Users/simoulin/Desktop/webserv;
+	root	/Users/jdyer/dev/webserv;
 
 	server_name localhost:8001;
 		index			index.html, index.htm;
 
 
 	location / {
-
+		client_max_body_size    1000000000;
 		index			index.html;
 		autoindex		on;
 		methods			GET,POST,DELETE;
