Problem with parsing of PUT's request in 42's tester

--- a/test/42_tester_stub.conf
+++ b/test/42_tester_stub.conf
@@ -10,7 +10,11 @@ server {
 		
 		root 	%ROOT%/html;
 		index			index.html;
-		methods			GET, POST;
+		methods			GET;
+	}
+	location /put_test {
+		root 	/home/florian/webserv/test/html/put_test;
+		methods	PUT;
 	}
     location /post_body {
 		client_max_body_size    100;
@@ -18,7 +22,7 @@ server {
     }
     location /directory {
 
-		methods			GET;
+		methods			GET, POST;
         root   %ROOT%/html/YoupiBanane;
         index  youpi.bad_extension;
     }
