added 42 tests as ./test/test42.sh

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@ Webserv
 compile_commands.json
 .clangd
 test/Response/GET/my_resp*
-test/42_tester.conf
+test/test42/put_test/file_should_exist_after
+test/ubuntu_tester
+test/ubuntu_cgi_tester
