--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,7 @@ compile_commands.json
 .clangd
 test/Response/GET/my_resp*
 test/test42/put_test/file_should_exist_after
+test/test42/YoupiBanane/youpi.bla
+test/test42/YoupiBanane/youpla.bla
 test/ubuntu_tester
 test/ubuntu_cgi_tester
