--- a/conf/config.conf
+++ b/conf/config.conf
@@ -132,7 +132,7 @@
 server {
 	listen  8001;
 	host 0.0.0.0;
-	root	/Users/simoulin/Desktop/webserv;
+	root	/var/www;
 
 	server_name localhost:8001;
 		index			index.html, index.htm;
@@ -140,11 +140,11 @@ server {
 
 	location / {
 
-		index			index.html;
-		autoindex		on;
+		index			index.html index.php  index.nginx-debian.html;
+		# autoindex		on;
 		methods			GET,POST,DELETE;
 		cgi_extension	.php;
-		cgi_bin			/usr/bin/php-cgi;
+		cgi_bin			/usr/bin/php-cgi.exe;
 	}
 
 	location /jj {
