working on Wordpress

--- a/conf/config.conf
+++ b/conf/config.conf
@@ -132,18 +132,15 @@
 server {
 	listen  8001;
 	host 0.0.0.0;
-	root	/Users/simoulin/Desktop/webserv;
+	root	/var/www;
 
 	server_name localhost:8001;
 		index			index.html, index.htm;
 
-		cgi_extension	.phppp;
-		cgi_bin			/usr/bin/php-cgiiii;
-
 
 	location / {
 
-		index			index.html;
+		index			index.html index.php;
 		autoindex		on;
 		methods			GET,POST,DELETE;
 		cgi_extension	.php;
@@ -174,4 +171,3 @@ server {
 		cgi_bin			/usr/bin/php-cgi;
 	}
 }
-
