- modif error code for delete request. - add some test for delete method. - rename 'test_methodGETPOST.sh' into 'test_methods.sh'

--- a/test/test42/test_methods.conf
+++ b/test/test42/test_methods.conf
@@ -8,7 +8,7 @@ server {
 	location / {
 		root 			./test42;
 		index			index.html;
-		methods			GET, POST;
+		methods			GET, POST,DELETE;
 		cgi_extension	.bla;
 		cgi_bin			./ubuntu_cgi_tester;
 	}
