modif delete methods for my_resp2

--- a/conf/config.conf
+++ b/conf/config.conf
@@ -126,7 +126,7 @@
 # 		autoindex		on;
 # 		methods			GET,POST;
 # 		cgi_extension	.php;
-# 		cgi_bin			/usr/bin/php-cgiii;
+# 		cgi_bin			/usr/bin/php-cgiii;z
 # 	}
 # }
 server {
