--- a/test/docker-wordpress/srcs/wordpress.conf
+++ b/test/docker-wordpress/srcs/wordpress.conf
@@ -4,12 +4,11 @@ server {
 	root	%ROOT_DIR%;
 
 	server_name	localhost;
-	index		index.php index.html, index.htm;
 
 	location / {
-		index			index.html;
+		index			index.php index.html;
 		autoindex		%AUTOINDEX%;
-		methods			GET,POST,DELETE;
+		methods			GET, POST, DELETE, HEAD;
 		cgi_extension	.php;
 		cgi_bin			/usr/bin/php-cgi;
 	}
