--- a/conf/config.conf
+++ b/conf/config.conf
@@ -140,7 +140,7 @@ server {
 
 	location / {
 
-		index			index.html index.php;
+		index			index.html index.php index.nginx-debian.html;
 		autoindex		on;
 		methods			GET,POST,DELETE;
 		cgi_extension	.php;
@@ -148,10 +148,9 @@ server {
 	}
 
 	location /jj {
-		autoindex		on;
-		methods			POST;
-		cgi_extension	.php;
-		cgi_bin			/usr/bin/php-cgi;
+		methods			GET,POST,DELETE;
+
+		redirection http://localhost:8001/html;
 	}
 
 
