fix: diminished CPU usage by setting the fds as unwritable in the NIOSelector

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,9 @@ name: Tests
 
 on:
   push:
-    branches: [ main, cgi ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, cgi ]
+    branches: [ main ]
 
 jobs:
   build:
