test: testing for the branch simple_site

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,9 @@ name: Tests
 
 on:
   push:
-    branches: [ main, cgi ]
+    branches: [ main, simple_site ]
   pull_request:
-    branches: [ main, cgi ]
+    branches: [ main, simple_site ]
 
 jobs:
   build:
